# actix-oauth

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
back/: .env.example  Cargo.toml
back/.github/workflows/: build.yml
back/front/: callback.html  index.html  login.html
back/src/: config.rs  lib.rs  main.rs
back/src/api/: auth_token.rs  common.rs  mod.rs
back/src/auth/: auth.rs  common.rs  github.rs  lib.rs  mod.rs
