[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.2.1", features = ["openssl"] }
chrono = "0.4.23"
derive_more = "0.99.17"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
openssl = "0.10.42"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
